--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "netlify-cli": "^2.25.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vuex": "^3.1.2"
